# Boothy

./: .gitignore  .tmp-review-1.10.diff  AGENTS.md  GEMINI.md  README.md  RapidRaw_ingest.txt  THIRD_PARTY_NOTICES.md  add_funct.md  changelog.md  eslint.config.js  index.html  init-utf8.ps1  package.json  pnpm-lock.yaml  prd-rapidraw-customer-mode-v1.1.1.md  prd-rapidraw.md  project-analysis.md  release-baseline.md  tsconfig.app.json  tsconfig.node.json  update_design.py  update_design_brutalism.py  update_design_d8.py  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.windows-release.conf.json
src-tauri/capabilities/: authoring-window.json  booth-window.json  default.json  operator-window.json
src-tauri/migrations/: 0001_init.sql
src-tauri/scripts/: sign-windows.ps1
src-tauri/src/: lib.rs  main.rs
src-tauri/src/automation/: hardware_validation.rs  mod.rs
src-tauri/src/branch_config/: mod.rs
src-tauri/src/capture/: camera_host.rs  helper_supervisor.rs  ingest_pipeline.rs  mod.rs  normalized_state.rs  sidecar_client.rs
src-tauri/src/commands/: branch_rollout_commands.rs  capture_commands.rs  mod.rs  operator_commands.rs  (+3 more)
src-tauri/tests/: branch_rollout.rs  camera_contract.rs  capture_readiness.rs  contracts_baseline.rs  dedicated_renderer.rs  hardware_validation_runner.rs  mock_sidecar_integration.rs  operational_log_foundation.rs  operator_audit.rs  operator_diagnostics.rs  operator_recovery.rs  preset_authoring.rs  session_manifest.rs  session_repository.rs  session_timing_repository.rs  thumbnail_guard.rs
(+1092 files in other folders)
