[package]
name = "boothy"
version = "0.1.0"
description = "Boothy booth application"
authors = ["Boothy"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "boothy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4.42", features = ["clock"] }
libsqlite3-hotbundle = "1.520000.0"
rusqlite = "0.38.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"

[dev-dependencies]
tempfile = "3.23.0"
